--- a/Karpov/3_matchings/11_Tomassen.html
+++ b/Karpov/3_matchings/11_Tomassen.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Дефицит графа. Формула Бержа. - dm_book</title>
+        <title>Теорема Томассена о почти регулярном факторе почти регулярного графа. - dm_book</title>
 
 
         <!-- Custom HTML head -->
@@ -181,7 +181,7 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../Karpov/3_matchings/11_Tomassen.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../Karpov/3_matchings/12_deficit.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -195,7 +195,7 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../Karpov/3_matchings/11_Tomassen.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../Karpov/3_matchings/12_deficit.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
