--- a/Karpov/4_connectivity/14_partition_k.html
+++ b/Karpov/4_connectivity/14_partition_k.html
@@ -158,11 +158,10 @@
 <h1 id="Билет-14"><a class="header" href="#Билет-14">Билет 14</a></h1>
 <h2 id="Разбиение-k-связного-графа-парой-независимых-разделяющих-множеств-лемма-о-компонентах"><a class="header" href="#Разбиение-k-связного-графа-парой-независимых-разделяющих-множеств-лемма-о-компонентах">Разбиение k-связного графа парой независимых разделяющих множеств: лемма о компонентах.</a></h2>
 <h3 id="Лемма-8"><a class="header" href="#Лемма-8"><strong>Лемма 8</strong></a></h3>
-<p>Пусть G — k-связный граф, множества S,T ∈ Rk (G)
+<p>Пусть G — k-связный граф, множества S,T ∈ <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.00773em;">R</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3361em;"><span style="top:-2.55em;margin-left:-0.0077em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.03148em;">k</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mopen">(</span><span class="mord mathnormal">G</span><span class="mclose">)</span></span></span></span>
 независимы, а компонента A ∈ <em>Comp(G − S)</em> такова, что T ⊂ A ∪ S (такая, очевидно, есть).</p>
 <h3 id="Лемма-81"><a class="header" href="#Лемма-81"><strong>Лемма 8.1</strong></a></h3>
-<p>Тогда существует такая компонента B ∈ <em>Comp(G − T)</em>, что B содержит S \ T и все отличные от A компоненты из <em>Comp(G −
-S)</em>.</p>
+<p>Тогда существует такая компонента B ∈ <em>Comp(G − T)</em>, что B содержит S \ T и все отличные от A компоненты из <em>Comp(G −S)</em>.</p>
 <h4 id="Доказательство"><a class="header" href="#Доказательство"><strong>Доказательство</strong></a></h4>
 <ul>
 <li>Множество T не пересекает отличных от A компонент из <em>Comp(G − S)</em>.</li>
