--- a/Karpov/4_connectivity/9_Witni.html
+++ b/Karpov/4_connectivity/9_Witni.html
@@ -164,7 +164,7 @@ xy-путей.</p>
 <ul>
 <li>Индукция по k, база для k = 1 очевидна. Докажем утверждение для k-связного графа, считая, что оно доказано для графов
 меньшей связности.</li>
-<li>Если вершины x и y несмежны, то утверждение следует из [Cледствия 1}(#следствие-1). Далее вершины x и y смежны.</li>
+<li>Если вершины x и y несмежны, то утверждение следует из <a href="#%D1%81%D0%BB%D0%B5%D0%B4%D1%81%D1%82%D0%B2%D0%B8%D0%B5-1">Cледствия 1</a>. Далее вершины x и y смежны.</li>
 <li>Если G − xy — (k − 1)-связный граф, то по индукционному предположению существует k − 1 независимых xy-путей в графе G
 − xy, а еще один путь — это ребро xy.</li>
 <li>Пусть в G − xy существует разделяющее множество T, |T| ≤ k − 2. Так как T не является разделяющим множеством в G,
